crates/pandalang/src/snapshots/pandalang__eval__tests__evals@bin_op__add_assoc.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: source
input_file: crates/pandalang/src/snapshot_inputs/bin_op/add_assoc.panda
---
15
