crates/pandalang/src/snapshots/pandalang__eval__tests__evals@bin_op__add_int.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/bin_op/add_int.panda
---
Ok(
    Int(
        Int {
            n: 2,
        },
    ),
)
