crates/pandalang/src/snapshots/pandalang__eval__tests__evals@bin_op__prec1.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/bin_op/prec1.panda
---
Ok(
    Int(
        Int {
            n: 3,
        },
    ),
)
