crates/pandalang/src/snapshots/pandalang__eval__tests__evals@bin_op__prec2.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: source
input_file: crates/pandalang/src/snapshot_inputs/bin_op/prec2.panda
---
5
