crates/pandalang/src/snapshots/pandalang__eval__tests__evals@bin_op__sub_int.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/bin_op/sub_int.panda
---
Ok(
    Int(
        Int {
            n: 0,
        },
    ),
)
